--- a/ajakan.html
+++ b/ajakan.html
@@ -49,7 +49,7 @@
         imageAlt: 'Gambar Hadiah', // Teks alternatif jika gambar tidak muncul
         html: `
         <p>Semoga kamu suka dengan hadiah ini</p>
-        <a href="https://example.com" class="btn-link" target="_blank">Tonton Ini Dong 🎉</a>
+        <a href="https://youtube.com/shorts/Nr8tL4ZfpXo?si=3ZpFWpD6o5lxhjOU" class="btn-link">Tonton Ini Dong 🎉</a>
         `,
         confirmButtonClass: 'btn btn-success',
         confirmButtonText: 'Love You! 🎉'
